# Crewai-Projects

shopping/: README.md  poem.txt  pyproject.toml  shopping_agent.txt
shopping/src/: shopping_agent.txt
shopping/src/shopping/: main.py
shopping/src/shopping/crews/poem_crew/: main.py  poem_crew.py  requirements.txt  shopping_agent.py
shopping/src/shopping/crews/poem_crew/config/: agents.yaml  tasks.yaml
