[project]
name = "shopping"
version = "0.1.0"
description = "shopping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
kickoff = "shopping.main:kickoff"
plot = "shopping.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
